--- a/judge-semi.html
+++ b/judge-semi.html
@@ -11,17 +11,26 @@
 		<div class="row" id="area" style="height : 600px;">
 		</div>
 		<div class="row">
-			<div class="col-md-3">
-				<button type="button" class="btn btn-primary" id="btnGreen">Green</button>
+			<div class="col-md-2">
+				<!-- <button type="button" class="btn btn-primary" id="btnGreen">Green</button> -->
+				<input type="radio" name="btnColor" value="1" id="radioGreen">
+				<label for="radioGreen"><h2>Green</h2></label>
+			</div>
+			<div class="col-md-2">
+				<!-- <button type="button" class="btn btn-primary" id="btnRed">Red</button> -->
+				<input type="radio" name="btnColor" value="2" id="radioRed">
+				<label for="radioRed"><h2>Red</h2></label>
 			</div>
 			<div class="col-md-3">
-				<button type="button" class="btn btn-primary" id="btnRed">Red</button>
+				<!-- <button type="button" class="btn btn-primary" id="btnBlue">Blue</button> -->
+				<input type="radio" name="btnColor" value="3" id="radioBlue">
+				<label for="radioBlue"><h2>Blue</h2></label>
 			</div>
-			<div class="col-md-3">
-				<button type="button" class="btn btn-primary" id="btnBlue">Blue</button>
-			</div>
-			<div class="col-md-3">
+			<div class="col-md-2">
 				<button type="button" class="btn btn-primary" id="btnClear">Clear</button>
+			</div>
+			<div class="col-md-2">
+				<button type="button" class="btn btn-primary" id="btnSubmit">Submit</button>
 			</div>
 		</div>
 	</div>
@@ -35,18 +44,27 @@
 			if(socket != undefined){
 				console.log("connected");
 			}
-			$('#btnGreen').click(function(){
-				socket.emit('judgesemi',1);
-				console.log('2');
-			});
-			$('#btnRed').click(function(){
-				socket.emit('judgesemi',2);
-			});
-			$('#btnBlue').click(function(){
-				socket.emit('judgesemi',3);
-			});
+			// $('#btnGreen').click(function(){
+			// 	socket.emit('judgesemi',1);
+			// 	console.log('2');
+			// });
+			// $('#btnRed').click(function(){
+			// 	socket.emit('judgesemi',2);
+			// });
+			// $('#btnBlue').click(function(){
+			// 	socket.emit('judgesemi',3);
+			// });
 			$('#btnClear').click(function(){
 				socket.emit('judgesemi',4);
+				document.getElementById('radioBlue').checked = false;
+				document.getElementById('radioGreen').checked = false;
+				document.getElementById('radioRed').checked = false;
+			});
+
+			$('#btnSubmit').click(function(){
+				if(document.getElementById('radioGreen').checked) socket.emit('judgesemi',1);
+				else if(document.getElementById('radioRed').checked) socket.emit('judgesemi',2);
+				else if(document.getElementById('radioBlue').checked) socket.emit('judgesemi',3);
 			});
 
 			socket.on('judgesemi2',function(data){
